node_js/kubernetes/k8s-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-server
  labels:
    app: node-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: node-server
        tier: service
    spec:
      containers:
      - name: node-server
        image: "node-server:1.0.1"
        ports:
        - containerPort: 5000
