node_js/kubernetes/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server
  labels:
    app: node-server
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: node-server
