node_js/kubernetes/k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-server
  labels:
    app: node-server
    tier: frontend
spec:
  backend:
    serviceName: node-server
    servicePort: 5000
